Fixes hero quicklinks overflow and padding. Resolves ISCWEB-126

--- a/assets/sass/isc-styles.scss
+++ b/assets/sass/isc-styles.scss
@@ -375,6 +375,7 @@ body, p { font-size: 16px !important; }
                         -webkit-border-radius:8px;
                         display: block;
                         padding: 8px 14px;
+                        padding-right: 45px;
                         font-weight: 800;
                         font-family: "Encode Sans Compressed", sans-serif;
                         color: #5a5a5a;
